--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -58,7 +58,12 @@
             </ul>
             #end
         </div>
-        <button class="zu-top-add-question" id="zu-top-add-question">提问</button>
+        <button class="zu-top-add-question" id="zu-top-add-question">
+
+            <a href="/questionForm">
+                提问
+            </a>
+        </button>
         <div role="search" id="zh-top-search" class="zu-top-search">
             <form method="GET" action="https://nowcoder.com/search" id="zh-top-search-form" class="zu-top-search-form">
                 <input type="hidden" name="type" value="content">
@@ -69,7 +74,7 @@
         <div id="zg-top-nav" class="zu-top-nav">
             <ul class="zu-top-nav-ul zg-clear">
                 <li class="zu-top-nav-li current" id="zh-top-nav-home">
-                    <a class="zu-top-nav-link" href="https://nowcoder.com/" id="zh-top-link-home" data-za-c="view_home" data-za-a="visit_home" data-za-l="top_navigation_home">首页</a>
+                    <a class="zu-top-nav-link" href="/" id="zh-top-link-home" data-za-c="view_home" data-za-a="visit_home" data-za-l="top_navigation_home">首页</a>
                 </li>
                 <li class="zu-top-nav-li " id="zh-top-nav-explore">
                     <a class="zu-top-nav-link" href="https://nowcoder.com/explore">发现</a>
