--- a/src/main/resources/templates/questionForm.html
+++ b/src/main/resources/templates/questionForm.html
@@ -27,28 +27,22 @@
         </div>
         <div class="desk-front sign-flow clearfix sign-flow-simple">
             <div class="view view-signin" data-za-module="SignInForm" style="display: block;">
-                <form  id="regloginform" method="post">
-                    <input type="hidden" name="_xsrf" value="21aa1c8d254df2899b23ab9afbd62a53">
+                <form id="questionform" method="post">
                     <div class="group-inputs">
-                        <div class="email input-wrapper">
-                            <input type="text" name="username" aria-label="手机号或邮箱" placeholder="手机号或邮箱" required="">
-                        </div>
                         <div class="input-wrapper">
-                            <input type="password" name="password" aria-label="密码" placeholder="密码" required="">
+                            <input type="text" name="title" aria-label="标题" placeholder="标题" required="">
+                        </div>
+                        <br>
+                        <div class="input-wrapper">
+                            <textarea  name="content" aria-label="内容" placeholder="内容" style="margin:auto" rows="12" cols="40" required=""></textarea>
                         </div>
                     </div>
-                    <input type="hidden" name="next" value="$!{next}"/>
-                    <input type="hidden" name="questionnext" value="$!{questionnext}"/>
-                    <div class="button-wrapper command clearfix">
-                        <button class="sign-button submit" type="submit" onclick="form=document.getElementById('regloginform');form.action='/login/'">登录</button>
-                        <button class="sign-button submit" type="submit" onclick="form=document.getElementById('regloginform');form.action='/reg/'">注册</button>
+                    <br>
+                    <div class="command clearfix">
+                        <button class="sign-button submit" style="margin-bottom: auto" type="submit" onclick="form=document.getElementById('questionform');form.action='/question/add1'">发布</button>
+                        <button class="sign-button "  >取消</button>
                     </div>
-                    <div class="signin-misc-wrapper clearfix">
-                        <label class="remember-me">
-                            <input type="checkbox" name="rememberme" checked="" value="false"> 记住我
-                        </label>
-                        <a class="unable-login" href="#">无法登录?</a>
-                    </div>
+
                 </form>
             </div>
         </div>
